crates/fec-parser/tests/snapshots/legacy__v8_quoted_hdr_1914568.snap
---
source: crates/fec-parser/tests/legacy.rs
expression: "render(\"8.x_1914568.fec\")"
snapshot_kind: text
---
FilingHeader {
    header_record: StringRecord(["HDR", "FEC", "8.5", "Campaign Manager 360", "1.0", "", "", ""]),
    record_type: "HDR",
    ef_type: "FEC",
    fec_version: "8.5",
    software_name: "Campaign Manager 360",
    software_version: "1.0",
    report_id: None,
    report_number: None,
    comment: None,
    style: Hdr,
    delimiter: Fs,
    name_delimiter: None,
    batch_number: None,
    received_date: None,
    legacy_fields: {},
    schedule_counts: {},
}
cover: form_type="F1N" filer_id="C00914010" filer_name="Zamora for New Mexico" report_code=None from=None through=None typed=true
  form_type = "F1N"
  filer_committee_id_number = "C00914010"
  change_of_committee_name = ""
  committee_name = "Zamora for New Mexico"
  change_of_address = ""
  street_1 = "116 Rosa Blvd"
  street_2 = ""
  city = "Clovis"
  state = "NM"
  zip_code = "881014521"
  change_of_committee_email = ""
  committee_email = "rebecca@jrluskcpa.com"
  change_of_committee_url = ""
  committee_url = ""
  effective_date = "20250821"
  signature_last_name = "Lusk"
  signature_first_name = "Jeremy"
  signature_middle_name = ""
  signature_prefix = ""
  signature_suffix = ""
  date_signed = "20250911"
  committee_type = "A"
  candidate_id_number = "H6NM03083"
  candidate_last_name = "Zamora"
  candidate_first_name = "Martin"
  candidate_middle_name = "R"
  candidate_prefix = ""
  candidate_suffix = ""
  candidate_office = "H"
  candidate_state = "NM"
  candidate_district = "03"
  party_code = "REP"
  party_type = ""
  organization_type = ""
  lobbyist_registrant_pac = ""
  lobbyist_registrant_pac_2 = ""
  leadership_pac = ""
  lobbyist_registrant_pac_3 = ""
  lobbyist_registrant_pac_4 = ""
  affiliated_committee_id_number = ""
  affiliated_committee_name = "None"
  affiliated_candidate_id_number = ""
  affiliated_last_name = ""
  affiliated_first_name = ""
  affiliated_middle_name = ""
  affiliated_prefix = ""
  affiliated_suffix = ""
  affiliated_street_1 = ""
  affiliated_street_2 = ""
  affiliated_city = ""
  affiliated_state = ""
  affiliated_zip_code = ""
  affiliated_relationship_code = ""
  custodian_last_name = "Lusk"
  custodian_first_name = "Rebecca"
  custodian_middle_name = ""
  custodian_prefix = ""
  custodian_suffix = ""
  custodian_street_1 = "1400 Pile St"
  custodian_street_2 = ""
  custodian_city = "Clovis"
  custodian_state = "NM"
  custodian_zip_code = "881014776"
  custodian_title = "Custodian of Records"
  custodian_telephone = "5757691944"
  treasurer_last_name = "Lusk"
  treasurer_first_name = "Jeremy"
  treasurer_middle_name = ""
  treasurer_prefix = ""
  treasurer_suffix = ""
  treasurer_street_1 = "1400 Pile st"
  treasurer_street_2 = ""
  treasurer_city = "Clovis"
  treasurer_state = "NM"
  treasurer_zip_code = "881014776"
  treasurer_title = "Treasurer"
  treasurer_telephone = "5759359907"
  agent_last_name = ""
  agent_first_name = ""
  agent_middle_name = ""
  agent_prefix = ""
  agent_suffix = ""
  agent_street_1 = ""
  agent_street_2 = ""
  agent_city = ""
  agent_state = ""
  agent_zip_code = ""
  agent_title = ""
  agent_telephone = ""
  bank_name = "Citizens Bank of Clovis"
  bank_street_1 = "421 Pile St"
  bank_street_2 = ""
  bank_city = "Clovis"
  bank_state = "NM"
  bank_zip_code = "88101"
  bank2_name = "Capital Bank NA"
  bank2_street_1 = "2275 Research Blvd"
  bank2_street_2 = "Ste 600"
  bank2_city = "Rockville"
  bank2_state = "MD"
  bank2_zip_code = "20850"
